--- a/README
+++ b/README
@@ -1,1 +1,5 @@
 this is a simple android app for testing the new renderscript engine.
+
+Important
+===========
+renderscript apps doesn't run in avd. you have to start this on a real android 3 device.
